--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.datasource.url=jdbc:mariadb://localhost:1306/mydb
+spring.datasource.username=myadmin // MariaDB ?? ??
+spring.datasource.password=1234 // MariaDB ?? ????
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver // DB ????
